<resources>
    <string name="app_name">TaskList</string>
    <string name="initial_string">initial_string</string>
    <string name="plus">+</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="add_task">ADD TASK</string>
    <string name="delete">DELETE TASK</string>
    <string name="Priority">Priority</string>
    <string name="Completed">Completed</string>
    <string name="TaskName">Task name</string>
    <string name="TaskDescription">Task description</string>
    <string name="Done">Done</string>
    <string name="all_tasks">All Tasks</string>
    <string name="prioritized_tasks">Prioritized</string>
    <string name="themes">Themes</string>
    <string name="DoNotClick">DO NOT CLICK!!!!</string>
    <string name="update_hint">Hint: Changes to the name/description are saved automatically</string>
</resources>
