<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/background"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onAddTask"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/add_task" />

    <EditText
        android:id="@+id/new_task_name"
        android:layout_width="360dp"
        android:layout_height="70sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/TaskName"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_task_description"
        android:layout_width="360sp"
        android:layout_height="326dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/TaskDescription"
        android:inputType="textMultiLine"
        android:textColor="?attr/textColor"
        android:textColorHint="?attr/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task_name"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>